# ValoAccounts

./: .gitignore  README.md  _shop_getter.py  dataflow.drawio  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.claude/: CLAUDE.md  CLAUDE.md.example
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  DATABASE.md  tauri.conf.json
src-tauri/capabilities/: shop.json
src-tauri/examples/: check_riot_client.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crypto/: dpapi.rs  keyring.rs  mod.rs
src-tauri/src/db/: accounts.rs  init.rs  mod.rs  models.rs  schema.sql  settings.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/process/: mod.rs
src-tauri/src/shop/: cache.rs  client.rs  error.rs  mod.rs  storefront.rs  types.rs  version.rs
src-tauri/src/skins/: api.rs  db.rs  error.rs  mod.rs  models.rs  schema.sql
src/components/: AddAccountModal.tsx  EditAccountModal.tsx  Layout.test.tsx  Layout.tsx  MainWindow.tsx  Navigation.tsx  ShopModal.tsx  Toast.tsx
src/lib/: tauri.ts
src/pages/: AccountsPage.test.tsx  AccountsPage.tsx  SettingsPage.tsx  ShopWindow.tsx
src/types/: account.ts  layout.ts  settings.ts
