[package]
name = "valo-accounts"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "valo_accounts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3.6"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
wmi = "0.14"
winapi = { version = "0.3", features = ["winbase", "fileapi", "winnt", "handleapi", "ioapiset", "winioctl", "winuser", "dpapi", "wincrypt"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "cookies"] }
regex = "1"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
